[project]
name = "mov"
version = "0.2.0"
description = "영화진흥위원회 영화 순위 데이터 처리"
authors = [
    {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[project.scripts]
mov-ping = "mov.cli:ping"

[tool.pytest.ini_options]
pythonpath = ["src/", "."]

[project.urls]
Homepage = "https://github.com/Seokxkyu/mov"
Issues = "https://github.com/Seokxkyu/mov/issues"
